k8s/dependencies/7-envoy-gateway/templates/gateway-internal.yaml
kind: GatewayClass
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: gateway-internal
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: internal-proxy-config
    namespace: envoy-gateway-system
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: gateway-internal
  namespace: envoy-gateway-system
spec:
  gatewayClassName: gateway-internal
  listeners:
    - name: grpc
      protocol: HTTP
      port: 9000
      allowedRoutes:
        namespaces:
          from: All
